<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appBarLayout"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />


    </android.support.design.widget.AppBarLayout>


    <RelativeLayout
       android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/mapContainer"
        android:layout_below="@id/appBarLayout"
        android:layout_marginBottom="80dp"
       android:layout_height="match_parent">

        <com.mapbox.mapboxsdk.maps.MapView
           android:id="@+id/mapview"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent" >

           <FrameLayout
               android:layout_width="match_parent"
               android:layout_gravity="bottom"
               android:layout_height="wrap_content">
               <Button
                   android:layout_width="match_parent"
                   android:text="@string/start_trip_text"
                   android:visibility="gone"
                   android:background="@color/colorAccentOpacity"
                   android:id="@+id/start_trip_button"
                   style="@style/Widget.AppCompat.Button.Colored"
                   android:layout_height="wrap_content" />

               <Button
                   android:layout_width="match_parent"
                   android:text="@string/end_trip_text"
                   android:id="@+id/end_trip_button"
                   android:visibility="gone"
                   android:background="@color/colorWarnOpacity"
                   style="@style/Widget.AppCompat.Button.Colored"
                   android:layout_height="wrap_content" />
           </FrameLayout>

       </com.mapbox.mapboxsdk.maps.MapView>



    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@android:color/white"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:visibility="visible"
                android:id="@+id/main_status_layout"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:text="@string/loading_text"
                    android:id="@+id/main_status_text"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />

            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:id="@+id/trip_info_layout"
                android:visibility="gone"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="@dimen/label_spacing"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/status_text"
                            android:layout_marginRight="@dimen/label_spacing"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/trip_in_progress_text"
                            android:id="@+id/trip_status_text"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/license_number_text"
                            android:layout_marginRight="@dimen/label_spacing"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/not_available_text"
                            android:id="@+id/driver_license_text"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:layout_height="wrap_content" />
                    </LinearLayout>




                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_gravity="right"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:gravity="right"
                        android:layout_marginBottom="@dimen/label_spacing"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/trip_fare_text"
                            android:layout_marginRight="@dimen/label_spacing"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/not_available_text"
                            android:id="@+id/trip_fare_text"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:gravity="right"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/trip_duration_text"
                            android:layout_marginRight="@dimen/label_spacing"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/not_available_text"
                            android:id="@+id/trip_duration_text"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:layout_height="wrap_content" />
                    </LinearLayout>




                </LinearLayout>


            </LinearLayout>


        </RelativeLayout>


    </LinearLayout>


</RelativeLayout>
